[package]
name = "dynamic_reload"
version = "0.2.0"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "Cross-platform dynamic reloading of shared libraries"
keywords = ["dynamic", "addins", "plugins", "reload", "sharedlibrary"]
repository = "https://github.com/emoon/dynamic_reload"
homepage = "https://github.com/emoon/dynamic_reload"
documentation = "http://prodbg.com/dynamic_reload/dynamic_reload/index.html"
build = "build.rs"

[dependencies]
notify = "^2.5.0"
libc = "0.2.0"
libloading = "0.2.0"
tempdir = "0.3"

