[package]
name = "dynamic_reload"
version = "0.8.0"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "Cross-platform dynamic reloading of shared libraries"
keywords = ["dynamic", "addins", "plugins", "reload", "sharedlibrary"]
repository = "https://github.com/emoon/dynamic_reload"
homepage = "https://github.com/emoon/dynamic_reload"
documentation = "http://prodbg.com/dynamic_reload/dynamic_reload/index.html"
build = "build.rs"
edition = "2021"

[features]
# Don't add timestamps to shadow copy.
no-timestamps = []

# Don't unload old library.
no-unload = []

[dependencies]
notify = "4.0.*"
libloading = "0.7.*"
tempfile = "3"
